# umami

./: README.md  umami.cabal
example/: example.hs
example/Example/: Parse.hs  Pipeline.hs  Source.hs
src/: Umami.hs
src/Umami/: Pipeline.hs  Pretty.hs
src/Umami/Monad/: FixT.hs  FreshT.hs
src/Umami/Pipeline/: Base.hs  Pipe.hs  Pretty.hs  Run.hs  Section.hs  Step.hs  Tap.hs
src/Umami/Pretty/: Base.hs  Class.hs  Combinators.hs  Render.hs  Simple.hs  Tabular.hs
test/: test.hs
test/Test/Umami/Pretty/: Arbitrary.hs  StripWhite.hs
