name:                  ambiata-umami
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-umami
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-umami

library
  build-depends:
                       base                            >= 3          && < 5
                     , transformers                    >= 0.3        && < 0.5
                     , either                          >= 4.3        && < 4.5
                     , ambiata-p
                     , text                            == 1.2.*
                     , containers                      == 0.5.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_umami
                       Umami

                       Umami.Monad.FreshT
                       Umami.Monad.FixT

                       Umami.Pretty.Base
                       Umami.Pretty.Combinators
                       Umami.Pretty.Render
                       Umami.Pretty.Simple
                       Umami.Pretty.Tabular
                       Umami.Pretty

                       Umami.Pipeline.Base
                       Umami.Pipeline.Pipe
                       Umami.Pipeline.Run
                       Umami.Pipeline.Section
                       Umami.Pipeline.Step
                       Umami.Pipeline.Tap
                       Umami.Pipeline.Pretty
                       Umami.Pipeline

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-umami
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , text                            == 1.2.*

test-suite example
  type:                exitcode-stdio-1.0

  main-is:             example.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       example

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-umami
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5
                     , either
                     , containers
